getFiltredInvoices