@@ -5,15 +5,17 @@ import cz.itnetwork.dto.mapper.InvoiceMapper;
 import cz.itnetwork.dto.mapper.PersonMapper;
 import cz.itnetwork.entity.InvoiceEntity;
 import cz.itnetwork.entity.PersonEntity;
+import cz.itnetwork.entity.filter.InvoiceFilter;
 import cz.itnetwork.entity.repository.InvoiceRepository;
 import cz.itnetwork.entity.repository.PersonRepository;
-import jakarta.persistence.EntityNotFoundException;
+import cz.itnetwork.entity.repository.specification.InvoiceSpecification;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.webjars.NotFoundException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class InvoiceServiceImpl implements InvoiceService {
@@ -33,7 +35,7 @@ public class InvoiceServiceImpl implements InvoiceService {
     public InvoiceDTO createInvoice(InvoiceDTO data) {
         InvoiceEntity entity = invoiceMapper.toEntity(data);
         entity.setBuyer(personRepository.getReferenceById(data.getBuyer().getId()));
-        entity.setSeller(personRepository.getReferenceById(data.getBuyer().getId()));
+        entity.setSeller(personRepository.getReferenceById(data.getSeller().getId()));
 
         invoiceRepository.saveAndFlush(entity);
         return invoiceMapper.toDTO(entity);
@@ -67,11 +69,13 @@ public class InvoiceServiceImpl implements InvoiceService {
     }
 
     @Override
-    public List<InvoiceDTO> getAllInvoices() {
-        return invoiceRepository.findAll()
+     public List<InvoiceDTO> getAllInvoices(InvoiceFilter invoiceFilter) {
+        InvoiceSpecification invoiceSpecification = new InvoiceSpecification(invoiceFilter);
+
+        return invoiceRepository.findAll(invoiceSpecification, PageRequest.of(0, invoiceFilter.getLimit()))
                 .stream()
                 .map(invoiceMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // region: Private methods
